checker/app/build/generated-src/antlr/main/com/tiobe/antlr/GherkinParser.java
// Generated from Gherkin.g4 by ANTLR 4.9.1
package com.tiobe.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GherkinParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BOMUTF8=1, BOMUTF16=2, WHITESPACE=3, COMMENT=4, DOCSTRING1=5, DOCSTRING2=6, 
		BACKGROUND=7, EXAMPLES=8, FEATURE=9, RULEX=10, SCENARIO=11, SCENARIOOUTLINE=12, 
		AND=13, ANYSTEP=14, BUT=15, DATATABLE=16, GIVEN=17, THEN=18, WHEN=19, 
		TAG=20, PARAMETER=21, NL=22, TEXT=23;
	public static final int
		RULE_main = 0, RULE_feature = 1, RULE_instruction = 2, RULE_stepInstruction = 3, 
		RULE_background = 4, RULE_rulex = 5, RULE_scenario = 6, RULE_scenarioOutline = 7, 
		RULE_step = 8, RULE_stepItem = 9, RULE_tagline = 10, RULE_and = 11, RULE_anystep = 12, 
		RULE_but = 13, RULE_datatable = 14, RULE_given = 15, RULE_then = 16, RULE_when = 17, 
		RULE_examples = 18, RULE_instructionDescription = 19, RULE_stepDescription = 20, 
		RULE_description = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"main", "feature", "instruction", "stepInstruction", "background", "rulex", 
			"scenario", "scenarioOutline", "step", "stepItem", "tagline", "and", 
			"anystep", "but", "datatable", "given", "then", "when", "examples", "instructionDescription", 
			"stepDescription", "description"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\u00EF\u00BB\u00BF'", "'\uFEFF'", null, null, null, null, "'Background:'", 
			null, "'Feature:'", "'Rule:'", null, null, "'And'", "'*'", "'But'", null, 
			"'Given'", "'Then'", "'When'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BOMUTF8", "BOMUTF16", "WHITESPACE", "COMMENT", "DOCSTRING1", "DOCSTRING2", 
			"BACKGROUND", "EXAMPLES", "FEATURE", "RULEX", "SCENARIO", "SCENARIOOUTLINE", 
			"AND", "ANYSTEP", "BUT", "DATATABLE", "GIVEN", "THEN", "WHEN", "TAG", 
			"PARAMETER", "NL", "TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gherkin.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GherkinParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class MainContext extends ParserRuleContext {
		public FeatureContext feature() {
			return getRuleContext(FeatureContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GherkinParser.EOF, 0); }
		public List<DescriptionContext> description() {
			return getRuleContexts(DescriptionContext.class);
		}
		public DescriptionContext description(int i) {
			return getRuleContext(DescriptionContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(GherkinParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(GherkinParser.NL, i);
		}
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public List<DatatableContext> datatable() {
			return getRuleContexts(DatatableContext.class);
		}
		public DatatableContext datatable(int i) {
			return getRuleContext(DatatableContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).exitMain(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			feature();
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SCENARIO) | (1L << SCENARIOOUTLINE) | (1L << AND) | (1L << ANYSTEP) | (1L << BUT) | (1L << DATATABLE) | (1L << GIVEN) | (1L << THEN) | (1L << WHEN) | (1L << TAG) | (1L << PARAMETER) | (1L << TEXT))) != 0)) {
				{
				{
				setState(45);
				description();
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(62);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(52); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(51);
						match(NL);
						}
						}
						setState(54); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==NL );
					setState(58);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case BACKGROUND:
					case RULEX:
					case SCENARIO:
					case SCENARIOOUTLINE:
					case AND:
					case ANYSTEP:
					case BUT:
					case GIVEN:
					case THEN:
					case WHEN:
					case TAG:
					case PARAMETER:
					case TEXT:
						{
						setState(56);
						instruction();
						}
						break;
					case DATATABLE:
						{
						setState(57);
						datatable();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					} 
				}
				setState(64);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(65);
				match(NL);
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FeatureContext extends ParserRuleContext {
		public TerminalNode FEATURE() { return getToken(GherkinParser.FEATURE, 0); }
		public List<TaglineContext> tagline() {
			return getRuleContexts(TaglineContext.class);
		}
		public TaglineContext tagline(int i) {
			return getRuleContext(TaglineContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(GherkinParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(GherkinParser.NL, i);
		}
		public FeatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_feature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).enterFeature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).exitFeature(this);
		}
	}

	public final FeatureContext feature() throws RecognitionException {
		FeatureContext _localctx = new FeatureContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_feature);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(76);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NL) {
						{
						{
						setState(73);
						match(NL);
						}
						}
						setState(78);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(79);
					tagline();
					}
					} 
				}
				setState(84);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(85);
				match(NL);
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(91);
			match(FEATURE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public RulexContext rulex() {
			return getRuleContext(RulexContext.class,0);
		}
		public List<DescriptionContext> description() {
			return getRuleContexts(DescriptionContext.class);
		}
		public DescriptionContext description(int i) {
			return getRuleContext(DescriptionContext.class,i);
		}
		public StepInstructionContext stepInstruction() {
			return getRuleContext(StepInstructionContext.class,0);
		}
		public List<StepDescriptionContext> stepDescription() {
			return getRuleContexts(StepDescriptionContext.class);
		}
		public StepDescriptionContext stepDescription(int i) {
			return getRuleContext(StepDescriptionContext.class,i);
		}
		public List<StepContext> step() {
			return getRuleContexts(StepContext.class);
		}
		public StepContext step(int i) {
			return getRuleContext(StepContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(GherkinParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(GherkinParser.NL, i);
		}
		public TaglineContext tagline() {
			return getRuleContext(TaglineContext.class,0);
		}
		public InstructionDescriptionContext instructionDescription() {
			return getRuleContext(InstructionDescriptionContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).exitInstruction(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instruction);
		int _la;
		try {
			int _alt;
			setState(143);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				rulex();
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SCENARIO) | (1L << SCENARIOOUTLINE) | (1L << AND) | (1L << ANYSTEP) | (1L << BUT) | (1L << DATATABLE) | (1L << GIVEN) | (1L << THEN) | (1L << WHEN) | (1L << TAG) | (1L << PARAMETER) | (1L << TEXT))) != 0)) {
					{
					{
					setState(94);
					description();
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				stepInstruction();
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SCENARIO) | (1L << SCENARIOOUTLINE) | (1L << AND) | (1L << ANYSTEP) | (1L << BUT) | (1L << DATATABLE) | (1L << GIVEN) | (1L << THEN) | (1L << WHEN) | (1L << TAG) | (1L << PARAMETER) | (1L << TEXT))) != 0)) {
					{
					{
					setState(101);
					description();
					}
					}
					setState(106);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(121);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(108); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(107);
							match(NL);
							}
							}
							setState(110); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( _la==NL );
						setState(112);
						stepDescription();
						setState(116);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SCENARIO) | (1L << SCENARIOOUTLINE) | (1L << AND) | (1L << ANYSTEP) | (1L << BUT) | (1L << DATATABLE) | (1L << GIVEN) | (1L << THEN) | (1L << WHEN) | (1L << TAG) | (1L << PARAMETER) | (1L << TEXT))) != 0)) {
							{
							{
							setState(113);
							description();
							}
							}
							setState(118);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						}
						} 
					}
					setState(123);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				}
				setState(132);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(125); 
						_errHandler.sync(this);
						_alt = 1;
						do {
							switch (_alt) {
							case 1:
								{
								{
								setState(124);
								match(NL);
								}
								}
								break;
							default:
								throw new NoViableAltException(this);
							}
							setState(127); 
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
						} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
						setState(129);
						step();
						}
						} 
					}
					setState(134);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(135);
				tagline();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(136);
				instructionDescription();
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SCENARIO) | (1L << SCENARIOOUTLINE) | (1L << AND) | (1L << ANYSTEP) | (1L << BUT) | (1L << DATATABLE) | (1L << GIVEN) | (1L << THEN) | (1L << WHEN) | (1L << TAG) | (1L << PARAMETER) | (1L << TEXT))) != 0)) {
					{
					{
					setState(137);
					description();
					}
					}
					setState(142);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StepInstructionContext extends ParserRuleContext {
		public BackgroundContext background() {
			return getRuleContext(BackgroundContext.class,0);
		}
		public ScenarioContext scenario() {
			return getRuleContext(ScenarioContext.class,0);
		}
		public ScenarioOutlineContext scenarioOutline() {
			return getRuleContext(ScenarioOutlineContext.class,0);
		}
		public StepInstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stepInstruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).enterStepInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).exitStepInstruction(this);
		}
	}

	public final StepInstructionContext stepInstruction() throws RecognitionException {
		StepInstructionContext _localctx = new StepInstructionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stepInstruction);
		try {
			setState(148);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BACKGROUND:
				enterOuterAlt(_localctx, 1);
				{
				setState(145);
				background();
				}
				break;
			case SCENARIO:
				enterOuterAlt(_localctx, 2);
				{
				setState(146);
				scenario();
				}
				break;
			case SCENARIOOUTLINE:
				enterOuterAlt(_localctx, 3);
				{
				setState(147);
				scenarioOutline();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BackgroundContext extends ParserRuleContext {
		public TerminalNode BACKGROUND() { return getToken(GherkinParser.BACKGROUND, 0); }
		public BackgroundContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_background; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).enterBackground(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).exitBackground(this);
		}
	}

	public final BackgroundContext background() throws RecognitionException {
		BackgroundContext _localctx = new BackgroundContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_background);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(BACKGROUND);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RulexContext extends ParserRuleContext {
		public TerminalNode RULEX() { return getToken(GherkinParser.RULEX, 0); }
		public RulexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rulex; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).enterRulex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).exitRulex(this);
		}
	}

	public final RulexContext rulex() throws RecognitionException {
		RulexContext _localctx = new RulexContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_rulex);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(RULEX);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScenarioContext extends ParserRuleContext {
		public TerminalNode SCENARIO() { return getToken(GherkinParser.SCENARIO, 0); }
		public ScenarioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scenario; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).enterScenario(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).exitScenario(this);
		}
	}

	public final ScenarioContext scenario() throws RecognitionException {
		ScenarioContext _localctx = new ScenarioContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_scenario);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(SCENARIO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScenarioOutlineContext extends ParserRuleContext {
		public TerminalNode SCENARIOOUTLINE() { return getToken(GherkinParser.SCENARIOOUTLINE, 0); }
		public ScenarioOutlineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scenarioOutline; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).enterScenarioOutline(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).exitScenarioOutline(this);
		}
	}

	public final ScenarioOutlineContext scenarioOutline() throws RecognitionException {
		ScenarioOutlineContext _localctx = new ScenarioOutlineContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_scenarioOutline);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(SCENARIOOUTLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StepContext extends ParserRuleContext {
		public StepItemContext stepItem() {
			return getRuleContext(StepItemContext.class,0);
		}
		public List<DescriptionContext> description() {
			return getRuleContexts(DescriptionContext.class);
		}
		public DescriptionContext description(int i) {
			return getRuleContext(DescriptionContext.class,i);
		}
		public StepContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_step; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).enterStep(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).exitStep(this);
		}
	}

	public final StepContext step() throws RecognitionException {
		StepContext _localctx = new StepContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_step);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			stepItem();
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SCENARIO) | (1L << SCENARIOOUTLINE) | (1L << AND) | (1L << ANYSTEP) | (1L << BUT) | (1L << DATATABLE) | (1L << GIVEN) | (1L << THEN) | (1L << WHEN) | (1L << TAG) | (1L << PARAMETER) | (1L << TEXT))) != 0)) {
				{
				{
				setState(159);
				description();
				}
				}
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StepItemContext extends ParserRuleContext {
		public AndContext and() {
			return getRuleContext(AndContext.class,0);
		}
		public AnystepContext anystep() {
			return getRuleContext(AnystepContext.class,0);
		}
		public ButContext but() {
			return getRuleContext(ButContext.class,0);
		}
		public DatatableContext datatable() {
			return getRuleContext(DatatableContext.class,0);
		}
		public GivenContext given() {
			return getRuleContext(GivenContext.class,0);
		}
		public ThenContext then() {
			return getRuleContext(ThenContext.class,0);
		}
		public WhenContext when() {
			return getRuleContext(WhenContext.class,0);
		}
		public ExamplesContext examples() {
			return getRuleContext(ExamplesContext.class,0);
		}
		public List<TaglineContext> tagline() {
			return getRuleContexts(TaglineContext.class);
		}
		public TaglineContext tagline(int i) {
			return getRuleContext(TaglineContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(GherkinParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(GherkinParser.NL, i);
		}
		public StepItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stepItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).enterStepItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).exitStepItem(this);
		}
	}

	public final StepItemContext stepItem() throws RecognitionException {
		StepItemContext _localctx = new StepItemContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_stepItem);
		int _la;
		try {
			int _alt;
			setState(191);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case AND:
				enterOuterAlt(_localctx, 1);
				{
				setState(165);
				and();
				}
				break;
			case ANYSTEP:
				enterOuterAlt(_localctx, 2);
				{
				setState(166);
				anystep();
				}
				break;
			case BUT:
				enterOuterAlt(_localctx, 3);
				{
				setState(167);
				but();
				}
				break;
			case DATATABLE:
				enterOuterAlt(_localctx, 4);
				{
				setState(168);
				datatable();
				}
				break;
			case GIVEN:
				enterOuterAlt(_localctx, 5);
				{
				setState(169);
				given();
				}
				break;
			case THEN:
				enterOuterAlt(_localctx, 6);
				{
				setState(170);
				then();
				}
				break;
			case WHEN:
				enterOuterAlt(_localctx, 7);
				{
				setState(171);
				when();
				}
				break;
			case EXAMPLES:
			case TAG:
			case NL:
				enterOuterAlt(_localctx, 8);
				{
				setState(181);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,20,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(175);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==NL) {
							{
							{
							setState(172);
							match(NL);
							}
							}
							setState(177);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(178);
						tagline();
						}
						} 
					}
					setState(183);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,20,_ctx);
				}
				setState(187);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NL) {
					{
					{
					setState(184);
					match(NL);
					}
					}
					setState(189);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(190);
				examples();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

